Mon, Dec 29, 2008
---------------------------------------------------------------------
- More work on opportunity index page.
- Fixed find() class override in [uses_mysql_uuid] plugin.

Sun, Dec 28, 2008
---------------------------------------------------------------------
- Added opportunity stage settings and colors.
- Created opportunities fixtures and started with opportunity index page.

Sat, Dec 27, 2008
---------------------------------------------------------------------
- Added find() override in [uses_mysql_uuid] plugin to make it possible to use find() instead of find_by_uuid().
- Added [contacts] and [opportunities] database migrations.
- Generated [opportunity] scaffold, added [contacts] fixtures.

Fri, Dec 26, 2008
---------------------------------------------------------------------
- Some model and javascript refactoring.
- Another sweep at specs to make them pass with the introduction of UUIDs.

Thu, Dec 25, 2008
---------------------------------------------------------------------
- Update campaign lead count and conversion ratio when creating a new lead.
- Make sure :uuid gets reloaded from the database and not from cached attributes.
- Added extra fields to [User] model and implemented [User/Edit profile].

Wed, Dec 24, 2008
---------------------------------------------------------------------
- Created [uses_mysql_uuid] plugin.
- Converted account, campaign, contact, lead, and user models to use UUIDs.
- Updated controllers to use find_by_uuid() instead of find().
- Updated routes to recognize and extract UUID from URLs.

Tue, Dec 23, 2008
---------------------------------------------------------------------
- Updated controller and view specs.
- Added permissions section to [Lead/New] form.
- Added validation and saving to [Lead] model to actually create new leads.

Mon, Dec 22, 2008
---------------------------------------------------------------------
- Moved form section toggling to application helper and home controller.