@@ -1,6 +1,6 @@
 #confirm{ hidden }
 .title_menu#menu
-  = link_to("Back to List of Accounts", accounts_path) + " | "
+  = link_to("List", accounts_path) + " | "
   = link_to("Edit", edit_account_path(@account)) + " | "
   = link_to_function("Delete?", confirm_delete(@account))
 .title= @account.name
