@@ -16,7 +16,10 @@
           .strip &nbsp;
         %div
           .tools[lead]{ hidden }
-            = link_to(image_tag("edit_12x12.png", :title => "Edit lead: #{h(lead.full_name)}"), edit_lead_path(lead))
+            = link_to(image_tag("information.png", :title => "View #{h(lead.full_name)}"), lead_path(lead))
+            = link_to(image_tag("arrow_circle_225.png", :title => "Convert #{h(lead.full_name)}"), convert_lead_path(lead))
+            = link_to(image_tag("tick_circle.png", :title => "Edit #{h(lead.full_name)}"), edit_lead_path(lead))
+            = link_to(image_tag("cross_circle.png", :title => "Delete #{h(lead.full_name)}"), "#")
           = link_to(lead.full_name, lead)
           %tt
             - if lead.company? && lead.title?
