@@ -5,6 +5,7 @@ class CreateOpportunities < ActiveRecord::Migration
       t.references  :user
       t.references  :account, :null => false
       t.references  :campaign
+      t.integer     :assigned_to
       t.string      :name,    :limit => 64, :null => false, :default => ""
       t.string      :source,  :limit => 32
       t.string      :stage,   :limit => 32
