@@ -8,12 +8,13 @@
 #  user_id     :integer(4)
 #  account_id  :integer(4)      not null
 #  campaign_id :integer(4)
+#  assigned_to :integer(4)
 #  name        :string(64)      default(""), not null
 #  source      :string(32)
 #  stage       :string(32)
 #  probability :integer(4)
 #  amount      :decimal(12, 2)
-#  close_on    :date
+#  closes_on   :date
 #  notes       :text
 #  deleted_at  :datetime
 #  created_at  :datetime
@@ -33,6 +34,7 @@ opportunity_<%= i %>:
   user_id     : <%= rand(5) + 1 %>
   account_id  : <%= rand(5) + 1 %>
   campaign_id : <%= (rand(5) + 1) if i > 10 %>
+  assigned_to : <%= rand(5) + 1 %>
   name        : <%= Faker::Lorem::sentence(rand(2) + 2).sub(".", "") %>
   source      : <%= source[rand(source.size)] %>
   stage       : <%= the_stage = stage[rand(stage.size)] %>
