@@ -1,3 +1,8 @@
+Tue, Dec 30, 2008
+---------------------------------------------------------------------
+- Added new view/edit/delete icons, started with [Lead/Convert].
+- Minor changes in [opportunities] migration.
+
 Mon, Dec 29, 2008
 ---------------------------------------------------------------------
 - More work on opportunity index page.
